--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,137 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261578896891585%22%3A%22LDgTyAs2%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "datr",
+        "value": "g5iRaCDb58f4YqJzwyxiFKYk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "sb",
+        "value": "hJiRaHa7WP8jH_M4OkzPEj7C",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61578896891585",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "xs",
+        "value": "13%3AXxtono0iq__71w%3A2%3A1754372850%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "pas",
+        "value": "61578896891585%3ABtcIDPYPLK",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B700x384x2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "fr",
+        "value": "0QI9vPWageBfZsjsp.AWdSS0B8iZvy8axfYYQPjAbKDgaZ25djMux8h1Nc6yrH2cFotZg.BokZiE..AAA.0.0.BokZsZ.AWcNPR0jugOBB7vlK6ehGY2NF2w",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100633330%3BT%3A29239548",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2886%3Btimestamp%3A1754372889",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T06:09:42.087Z",
+        "lastAccessed": "2025-08-05T06:09:42.087Z"
+    }
+]
