--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.040Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "sb",
@@ -23,26 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "ps_n",
@@ -59,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "c_user",
@@ -68,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "xs",
@@ -77,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "locale",
@@ -86,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "pas",
@@ -95,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "vpd",
@@ -104,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "fr",
-        "value": "0QI9vPWageBfZsjsp.AWdSS0B8iZvy8axfYYQPjAbKDgaZ25djMux8h1Nc6yrH2cFotZg.BokZiE..AAA.0.0.BokZsZ.AWcNPR0jugOBB7vlK6ehGY2NF2w",
+        "value": "0QI9vPWageBfZsjsp.AWfQ2v8M9ju2CbGwqkBbNNMRC9sjHMDiG6Is5Jbf6yaGeqsjj0c.BokZiE..AAA.0.0.BokaRM.AWfd4g_gNkktqPeGSZKONM67ZP0",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "fbl_st",
-        "value": "100633330%3BT%3A29239548",
+        "value": "100631918%3BT%3A29239587",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2886%3Btimestamp%3A1754372889",
+        "value": "v2%3Bclient_version%3A2886%3Btimestamp%3A1754375244",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T06:09:42.087Z",
-        "lastAccessed": "2025-08-05T06:09:42.087Z"
+        "creation": "2025-08-05T06:30:26.041Z",
+        "lastAccessed": "2025-08-05T06:30:26.041Z"
     }
 ]
