--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ROX SOBUJ⚠️",
+    "BOTNAME": "☢️𖣘🆁🅾🆇 🆂🅾🅱🆄🅹𖣘☢️",
     "PREFIX": "+",
     "ADMINBOT": [
         "61578896891585",
@@ -24,7 +24,7 @@
         "61578225059758"
     ],
     "NDH": [
-        "100000478146113"
+        "61578896891585"
     ],
     "DATABASE": {
         "sqlite": {
