--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
+        "creation": "2025-08-05T09:18:32.881Z",
+        "lastAccessed": "2025-08-05T09:18:32.882Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
+        "creation": "2025-08-05T09:18:32.882Z",
+        "lastAccessed": "2025-08-05T09:18:32.882Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
+        "creation": "2025-08-05T09:18:32.882Z",
+        "lastAccessed": "2025-08-05T09:18:32.882Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
+        "creation": "2025-08-05T09:18:32.882Z",
+        "lastAccessed": "2025-08-05T09:18:32.882Z"
     },
     {
         "key": "ps_n",
@@ -41,26 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61578896891585",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
-    },
-    {
-        "key": "xs",
-        "value": "13%3AXxtono0iq__71w%3A2%3A1754372850%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
+        "creation": "2025-08-05T09:18:32.882Z",
+        "lastAccessed": "2025-08-05T09:18:32.882Z"
     },
     {
         "key": "locale",
@@ -68,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
+        "creation": "2025-08-05T09:18:32.882Z",
+        "lastAccessed": "2025-08-05T09:18:32.882Z"
     },
     {
         "key": "pas",
@@ -77,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
+        "creation": "2025-08-05T09:18:32.882Z",
+        "lastAccessed": "2025-08-05T09:18:32.882Z"
     },
     {
         "key": "vpd",
@@ -86,26 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
-    },
-    {
-        "key": "fr",
-        "value": "0QI9vPWageBfZsjsp.AWfQ2v8M9ju2CbGwqkBbNNMRC9sjHMDiG6Is5Jbf6yaGeqsjj0c.BokZiE..AAA.0.0.BokaRM.AWfd4g_gNkktqPeGSZKONM67ZP0",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100631918%3BT%3A29239587",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
+        "creation": "2025-08-05T09:18:32.882Z",
+        "lastAccessed": "2025-08-05T09:18:32.882Z"
     },
     {
         "key": "wl_cbv",
@@ -113,7 +77,16 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T08:54:48.316Z",
-        "lastAccessed": "2025-08-05T08:54:48.316Z"
+        "creation": "2025-08-05T09:18:32.882Z",
+        "lastAccessed": "2025-08-05T09:18:32.882Z"
+    },
+    {
+        "key": "fr",
+        "value": "0QI9vPWageBfZsjsp.AWeqpJnu7Kco1uLj79f04rwES32peoyUJW4gKs9wH-L8gXNwcf0.BokZiE..AAA.0.0.BokcgK.AWdFlBB62hLdosIUjzYkueA0Pqo",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-05T09:18:32.882Z",
+        "lastAccessed": "2025-08-05T09:18:32.882Z"
     }
 ]
