--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "☢️𖣘🆁🅾🆇 🆂🅾🅱🆄🅹𖣘☢️",
+    "BOTNAME": "𖣘🆁🅾🆇☢️🆂🅾🅱🆄🅹𖣘",
     "PREFIX": "+",
     "ADMINBOT": [
         "61578896891585",
