--- a/appstate.json
+++ b/appstate.json
@@ -1,21 +1,12 @@
 [
     {
-        "key": "dbln",
-        "value": "%7B%2261578896891585%22%3A%22LDgTyAs2%22%7D",
-        "domain": "facebook.com",
-        "path": "/login/device-based/",
-        "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
-    },
-    {
         "key": "datr",
         "value": "g5iRaCDb58f4YqJzwyxiFKYk",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "sb",
@@ -23,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "locale",
@@ -50,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "pas",
@@ -59,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "vpd",
@@ -68,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "wd",
@@ -86,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "c_user",
@@ -95,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "xs",
-        "value": "31%3AEITTija0cYucVA%3A2%3A1754388100%3A-1%3A-1",
+        "value": "45%3A_hgjapoKtBG2uA%3A2%3A1754391309%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "fr",
-        "value": "0QI9vPWageBfZsjsp.AWek55Bv_CYPyg7JFKCnRO7Zzm7O0wbmxOtgjSDtjMdT2MRXZJk.BokZiE..AAA.0.0.BokdaJ.AWeeJAxqpGHB5xhyZusAigm0DME",
+        "value": "0QI9vPWageBfZsjsp.AWcEKto_0B0HknjHgB5uzHQ-hd6mXKZzj0Eb8cxRUcCnzaBgI4M.BokZiE..AAA.0.0.BokeNe.AWcTKR3kIt7OvgR5T_pNpm8JOkU",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "fbl_st",
-        "value": "101721579%3BT%3A29239802",
+        "value": "101717886%3BT%3A29239856",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2886%3Btimestamp%3A1754388105",
+        "value": "v2%3Bclient_version%3A2886%3Btimestamp%3A1754391390",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-05T10:04:12.339Z",
-        "lastAccessed": "2025-08-05T10:04:12.339Z"
+        "creation": "2025-08-05T10:58:54.092Z",
+        "lastAccessed": "2025-08-05T10:58:54.092Z"
     }
 ]
